# STAM

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  S01_3Ddata.csv  S01_3Ddata_dst_init.csv  S02_INPUT.zip.REMOVED.git-id  S03_INPUT.zip.REMOVED.git-id  ismar.h  main.cpp  main2.cpp  user_function.cpp
cmake_modules/: Findcvsba.cmake
data/: fetch_data.bash  setup_symb_links.bash
data/S01_INPUT/: S01_2Ddata_dst_init.csv
data/S01_INPUT/S01L03_patch/: desktop.ini
data/S02_INPUT/: S02L03_patch.zip.2  S02_2Ddata_dst_init.csv  S02_3Ddata.csv.1  S02_3Ddata_dst_init.csv
data/S03_INPUT/: S03_2Ddata_dst_init.csv  S03_3Ddata_dst_init.csv
include/: STAM.h  VOodoometry.h  VideoSource.h  lbp.hpp  types.h  utils.h
src/: STAM.cpp  VOodoometry.cpp  VideoSource.cpp  cvsba_simple_test.cpp  joma3.cpp  joma4.cpp  lbp.cpp  main.cpp  types.cpp  utils.cpp
